Fix 'hidden' mobile filters overflowing map container

--- a/app/assets/stylesheets/global/global.css.scss
+++ b/app/assets/stylesheets/global/global.css.scss
@@ -22,6 +22,7 @@ body {
 
 main {
   z-index: 0;
+  overflow: hidden;
 }
 
 strong,
